--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,11 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Users-->
+        <scene sceneID="Ubr-U4-k07">
+            <objects>
+                <tableViewController id="WXz-dn-j6r" customClass="UsersTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="mZm-vG-LUO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="hVN-3h-vR1" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="31"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hVN-3h-vR1" id="Szy-xW-3zU">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="31"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1sy-9g-wdt">
+                                            <rect key="frame" x="29" y="1" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="LfV-EB-lc3"/>
+                                                <constraint firstAttribute="width" secondItem="1sy-9g-wdt" secondAttribute="height" multiplier="1:1" id="POW-CO-p6K"/>
+                                                <constraint firstAttribute="height" constant="30" id="luC-sn-iiA"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-7u-omZ">
+                                            <rect key="frame" x="76" y="6" width="42" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="FY7-7u-omZ" secondAttribute="trailing" constant="20" id="2Gp-Wz-nX2"/>
+                                        <constraint firstItem="FY7-7u-omZ" firstAttribute="top" secondItem="Szy-xW-3zU" secondAttribute="top" constant="5" id="CZ1-9b-bcQ"/>
+                                        <constraint firstAttribute="bottom" secondItem="FY7-7u-omZ" secondAttribute="bottom" constant="5" id="az5-8m-7Es"/>
+                                        <constraint firstItem="1sy-9g-wdt" firstAttribute="centerY" secondItem="Szy-xW-3zU" secondAttribute="centerY" id="fNw-Xc-aor"/>
+                                        <constraint firstItem="FY7-7u-omZ" firstAttribute="leading" secondItem="1sy-9g-wdt" secondAttribute="trailing" constant="20" id="mdJ-zQ-z0L"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="userImage" destination="1sy-9g-wdt" id="Ytb-jh-yMQ"/>
+                                    <outlet property="userNameLabel" destination="FY7-7u-omZ" id="RRS-hB-JDL"/>
+                                    <segue destination="Y7H-cy-xXU" kind="show" identifier="showDetail" id="XHn-JD-sXa"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="WXz-dn-j6r" id="VzJ-EL-1Ai"/>
+                            <outlet property="delegate" destination="WXz-dn-j6r" id="XVJ-Q3-cjC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="EDp-GJ-BP2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="I7S-oZ-30c">
+                            <connections>
+                                <action selector="addUsersButton:" destination="WXz-dn-j6r" id="gpg-Rx-oWK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XXH-Ua-dMK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-202.40000000000001" y="126.38680659670166"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="FrQ-Yi-LMO">
+            <objects>
+                <viewController id="Y7H-cy-xXU" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IpV-01-Ir6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Fh-fN-gu8">
+                                <rect key="frame" x="87.5" y="64" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="d3E-Vm-iWY"/>
+                                    <constraint firstAttribute="width" secondItem="0Fh-fN-gu8" secondAttribute="height" multiplier="1:1" id="fYK-Fd-noC"/>
+                                    <constraint firstAttribute="width" constant="200" id="tOf-qd-daL"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rPU-hw-5d5">
+                                <rect key="frame" x="20" y="284" width="335" height="81.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FwR-ZL-igp">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOL-JS-PSz">
+                                        <rect key="frame" x="0.0" y="30.5" width="335" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J2z-DL-GD2">
+                                        <rect key="frame" x="0.0" y="61" width="335" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="0Fh-fN-gu8" firstAttribute="top" secondItem="JoU-1a-vIW" secondAttribute="top" constant="20" id="3cn-xd-bda"/>
+                            <constraint firstItem="rPU-hw-5d5" firstAttribute="leading" secondItem="JoU-1a-vIW" secondAttribute="leading" constant="20" id="4db-Yq-udB"/>
+                            <constraint firstItem="0Fh-fN-gu8" firstAttribute="centerX" secondItem="IpV-01-Ir6" secondAttribute="centerX" id="XPr-lJ-pGz"/>
+                            <constraint firstItem="rPU-hw-5d5" firstAttribute="top" secondItem="0Fh-fN-gu8" secondAttribute="bottom" constant="20" id="fID-e3-5wl"/>
+                            <constraint firstItem="JoU-1a-vIW" firstAttribute="trailing" secondItem="rPU-hw-5d5" secondAttribute="trailing" constant="20" id="z0e-yC-NGQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JoU-1a-vIW"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="WQg-sO-fYN"/>
+                    <connections>
+                        <outlet property="userEmail" destination="J2z-DL-GD2" id="UCA-xM-Ln3"/>
+                        <outlet property="userImage" destination="0Fh-fN-gu8" id="mw2-GP-A9g"/>
+                        <outlet property="userName" destination="FwR-ZL-igp" id="LiQ-1V-pgl"/>
+                        <outlet property="userPhone" destination="jOL-JS-PSz" id="YVz-3w-8gd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xA2-kB-4w5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="500" y="126"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YSw-8o-Fuj">
+            <objects>
+                <navigationController id="Qcs-S2-J5W" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xp7-Xs-koc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="WXz-dn-j6r" kind="relationship" relationship="rootViewController" id="S0Y-AU-cJm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OkL-wc-2ra" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-935" y="128"/>
+        </scene>
+    </scenes>
 </document>
