--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qcs-S2-J5W">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -17,39 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="hVN-3h-vR1" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="31"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="hVN-3h-vR1">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hVN-3h-vR1" id="Szy-xW-3zU">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="31"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1sy-9g-wdt">
-                                            <rect key="frame" x="29" y="1" width="30" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="30" id="LfV-EB-lc3"/>
-                                                <constraint firstAttribute="width" secondItem="1sy-9g-wdt" secondAttribute="height" multiplier="1:1" id="POW-CO-p6K"/>
-                                                <constraint firstAttribute="height" constant="30" id="luC-sn-iiA"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FY7-7u-omZ">
-                                            <rect key="frame" x="76" y="6" width="42" height="21.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="FY7-7u-omZ" secondAttribute="trailing" constant="20" id="2Gp-Wz-nX2"/>
-                                        <constraint firstItem="FY7-7u-omZ" firstAttribute="top" secondItem="Szy-xW-3zU" secondAttribute="top" constant="5" id="CZ1-9b-bcQ"/>
-                                        <constraint firstAttribute="bottom" secondItem="FY7-7u-omZ" secondAttribute="bottom" constant="5" id="az5-8m-7Es"/>
-                                        <constraint firstItem="1sy-9g-wdt" firstAttribute="centerY" secondItem="Szy-xW-3zU" secondAttribute="centerY" id="fNw-Xc-aor"/>
-                                        <constraint firstItem="FY7-7u-omZ" firstAttribute="leading" secondItem="1sy-9g-wdt" secondAttribute="trailing" constant="20" id="mdJ-zQ-z0L"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="userImage" destination="1sy-9g-wdt" id="Ytb-jh-yMQ"/>
-                                    <outlet property="userNameLabel" destination="FY7-7u-omZ" id="RRS-hB-JDL"/>
                                     <segue destination="Y7H-cy-xXU" kind="show" identifier="showDetail" id="XHn-JD-sXa"/>
                                 </connections>
                             </tableViewCell>
@@ -59,13 +34,7 @@
                             <outlet property="delegate" destination="WXz-dn-j6r" id="XVJ-Q3-cjC"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="EDp-GJ-BP2">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="I7S-oZ-30c">
-                            <connections>
-                                <action selector="addUsersButton:" destination="WXz-dn-j6r" id="gpg-Rx-oWK"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Users" id="EDp-GJ-BP2"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XXH-Ua-dMK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
