--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -24,13 +24,12 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="izC-PH-sJq">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yvb-WN-EyZ">
                                             <rect key="frame" x="10" y="0.0" width="50" height="50"/>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="izC-PH-sJq" secondAttribute="height" multiplier="1:1" id="MdV-o1-oaW"/>
+                                                <constraint firstAttribute="width" secondItem="Yvb-WN-EyZ" secondAttribute="height" multiplier="1:1" id="SHW-hg-6LP"/>
                                             </constraints>
-                                        </view>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zd5-1e-elY">
                                             <rect key="frame" x="80" y="8" width="275" height="34"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
@@ -39,18 +38,18 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="izC-PH-sJq" secondAttribute="bottom" id="1F1-VE-2Cv"/>
-                                        <constraint firstItem="izC-PH-sJq" firstAttribute="top" secondItem="vf3-u1-DOz" secondAttribute="top" id="51r-7k-BUa"/>
+                                        <constraint firstItem="Yvb-WN-EyZ" firstAttribute="leading" secondItem="vf3-u1-DOz" secondAttribute="leading" constant="10" id="Adm-ZU-wNq"/>
                                         <constraint firstItem="Zd5-1e-elY" firstAttribute="top" secondItem="vf3-u1-DOz" secondAttribute="top" constant="8" id="C2I-QB-zS0"/>
                                         <constraint firstAttribute="bottom" secondItem="Zd5-1e-elY" secondAttribute="bottom" constant="8" id="Sc9-Cf-d3D"/>
-                                        <constraint firstItem="izC-PH-sJq" firstAttribute="leading" secondItem="vf3-u1-DOz" secondAttribute="leading" constant="10" id="UYV-fP-CRB"/>
+                                        <constraint firstItem="Yvb-WN-EyZ" firstAttribute="top" secondItem="vf3-u1-DOz" secondAttribute="top" id="Smb-Pc-ltv"/>
+                                        <constraint firstItem="Zd5-1e-elY" firstAttribute="leading" secondItem="Yvb-WN-EyZ" secondAttribute="trailing" constant="20" id="bv9-f1-zgp"/>
+                                        <constraint firstAttribute="bottom" secondItem="Yvb-WN-EyZ" secondAttribute="bottom" id="dSD-uO-eyZ"/>
                                         <constraint firstAttribute="trailing" secondItem="Zd5-1e-elY" secondAttribute="trailing" constant="20" id="fBO-AG-UGq"/>
-                                        <constraint firstItem="Zd5-1e-elY" firstAttribute="leading" secondItem="izC-PH-sJq" secondAttribute="trailing" constant="20" id="oWD-E9-ZZp"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="userNameLabel" destination="Zd5-1e-elY" id="4fz-tt-LtN"/>
-                                    <outlet property="userThumbnailView" destination="izC-PH-sJq" id="t2W-us-skz"/>
+                                    <outlet property="userThumbnailImage" destination="Yvb-WN-EyZ" id="xvQ-er-mdM"/>
                                     <segue destination="Met-ie-CCs" kind="show" identifier="UserDetailSegue" id="Wc0-zm-fqu"/>
                                 </connections>
                             </tableViewCell>
